integ-tests/tests/snapshots/parser__key_names.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "!": 3,
  "\"": 3,
  "-": 3,
  "8": 8,
  "_": 3,
  "a": 3,
  "a^b": 3,
  "character encoding": "value",
  "foo": 3,
  "foo_-2--3--r23f--4-f2-4": 3,
  "foo_3": 3,
  "key#name": 5,
  "~!@#$^&*()_+-`1234567890[]\\|/?><.,;:'": 1,
  "ʎǝʞ": "value"
}
