integ-tests/tests/snapshots/parser__newline_literal.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ newline_literal:1:6
  │  
1 │   a = '
  │ ╭─────^
2 │ │ '
  │ ╰^ invalid character '\n' in string


