integ-tests/tests/snapshots/parser__table_9_valid.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "fruit": {
    "apple": {
      "color": "red",
      "taste": {
        "sweet": true
      },
      "texture": {
        "smooth": true
      }
    }
  }
}
