integ-tests/tests/snapshots/parser__table_array_implicit.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[redefine-as-array]: table redefined as array
  ┌─ table_array_implicit:5:1
  │  
5 │ ╭ [[albums]]
6 │ │ name = "Born in the USA"
  │ ╰^


