integ-tests/tests/snapshots/parser__table_names.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "\"": {},
  "\"\"": {},
  "a": {
    "b": {}
  },
  "a.a": {},
  "f f": {},
  "f.f": {}
}
