integ-tests/tests/snapshots/parser__tables_in_arrays.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "foo": [
    {
      "bar": {}
    },
    {
      "bar": {}
    }
  ]
}
