integ-tests/tests/snapshots/parser__underscores.snap
---
source: integ-tests/tests/parser.rs
expression: valid_toml
---
{
  "hundred": 100,
  "ten": 10,
  "thousand": 1000,
  "thousand-neg": -1000,
  "thousand-pos": 1000
}
